[tool.poetry]
name = "videosloader"
version = "0.1.0"
description = ""
authors = ["hhhscvx <hhhscvx@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.17.0"
yt-dlp = "^2025.1.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
